--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.30.0",
+    "daisyui": "^2.0.0-next.2",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
